--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
-    "axios": "^1.1.3"
+    "axios": "^1.1.3",
+    "dayjs": "^1.11.5",
+    "lodash.debounce": "^4.0.8",
+    "toastify-js": "^1.12.0"
   }
 }
