--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.1.3",
     "dayjs": "^1.11.5",
     "lodash.debounce": "^4.0.8",
-    "toastify-js": "^1.12.0"
+    "toastify-js": "^1.12.0",
+    "yup": "^0.32.11"
   }
 }
