--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "dayjs": "^1.11.5",
+    "dompurify": "^2.4.3",
     "lodash.debounce": "^4.0.8",
     "toastify-js": "^1.12.0",
     "yup": "^0.32.11"
